Make scrollable header (to fix the classes react.js page that does header-positioning), and fix offset alignment of header image.

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -8,12 +8,12 @@ body, h1, h2, h3, h4, h5, h6 {
 
 .header-v6.header-fixed-shrink .dancedeets-logo {
     position: relative;
-    top: -6px;
+    top: -3px;
 }
 
 .header-v6 .dancedeets-logo {
     position: relative;
-    top: -12px;
+    top: -6px;
 }
 
 .dancedeets-tagline {
